# xen

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  deploy.sh  docker-compose.yml  goal.yaml  project.functions.toon  pyproject.toml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/test/: xeen-desktop.test.js
nginx/: nginx.conf
tests/: test_capture_backends.py  test_e2e.py  test_server_api.py  test_xen_capture.py
xeen/: __init__.py  __main__.py  auto_pipeline.py  branding.py  capture.py  capture_backends.py  cli.py  config.py  server.py
xeen/static/: style.css
xeen/templates/: capture.html  index.html  sessions.html
xen/: __init__.py  __main__.py  capture.py  cli.py  config.py
